--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "react-mic": "^12.4.6",
     "react-scripts": "4.0.3",
     "axios": "^0.21.1",
-    "web-vitals": "^1.1.0"
+    "web-vitals": "^1.1.0",
+    "@material-ui/core": "^4.9.13",
+    "@material-ui/icons": "^4.9.1"
   },
   "scripts": {
     "start": "react-scripts start",
